added listeners to fret click, minor refactoring

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ hello world
 <div class="class">
     class
 </div>
-<div class="id">
+<div id="id">
     id
 </div>
 <script>
@@ -23,7 +23,8 @@ hello world
         };
         _chorus.init("class", config);
         config = {
-            instrument: "bass"
+            instrument: "bass",
+            hideHeadings:false
         };
         _chorus.init("id", config);
     });
