modified instrument parameter

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ hello world
         };
         _chorus.init("class", config);
         config = {
-            instrument: "main",
+            instrument: ["main","violin"],
             hideHeadings:false
         };
         _chorus.init("id", config);
