added dictionary for instrument classes, search notes function is complete

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ hello world
 <div id="id">
     id
 </div>
+<a onclick="_chorus.searchScales()">search all scales</a>
 <script>
     document.addEventListener("DOMContentLoaded", function(e) {
         var config = {
