updated error messages. added string order parameter

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ hello world
         var config = {
             instrument: "guitar",
             headingElement:"h3",
-            messages:"console"
+            messages:"console",
+            stringOrder:"asc"
         };
         _chorus.init("class", config);
         config = {
