working on setting container id explicitly

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ hello world
         config = {
             instrument: ["main","violin"],
             scaleSearchButton: false,
-            debug:"console"
+            debug:"console",
+            containerId: "myId"
         };
         _chorus.init("id", config);
     });
