working on scale compile. problem with get tone by note for non natural notes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ hello world
             containerId: "myId"
         };
         _chorus.init("id", config);
-        _chorus.logic.scales.compile.init();
+//        _chorus.logic.scales.compile.init();
     });
     document.addEventListener("chorusInitComplete", function(e) {
         console.log(e.detail);
