added scale search mode parameter

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ hello world
             instrument: ["main","violin"],
             scaleSearchButton: false,
             debug:"console",
-            containerId: "myId"
+            containerId: "myId",
+            scaleSearchMode: "main"
         };
         _chorus.init("id", config);
 //        document.getElementById("compile").innerHTML = _chorus.logic.scales.compile.init();
