added classname config parameter

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ hello world
             scaleSearchButton: false,
             chorusDebug:"console",
             layoutContainerId: "myId",
+            layoutContainerClass: "content",
             scaleSearchMode: "main"
         };
         _chorus.init("id", config);
