core - converted to express app for development purposes; folder restructuring to better separate source files and compiled files

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <script src="_chorus.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="_chorus.min.css">
-    <link rel="stylesheet" type="text/css" href="_chorus.min.css.map">
+    <script src="/js/chorus.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/chorus.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/chorus.min.css.map">
 </head>
 <div id="output">
 
