added clear selected notes option

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <h2 class="chorus-standard-font">Results: Chords</h2>
 <div id="results-chords" class="results-container">
 </div>
-<a onclick="_chorus.search()" class="chorus-search-button">search for scales and chords</a>
+<a onclick="_chorus.search();" class="chorus-search-button">search for scales and chords</a>
+<a onclick="_chorus.clear();" class="chorus-search-button">Clear Chorus Results</a>
 <script>
     document.addEventListener('DOMContentLoaded', function(e) {
         var config = {
