core - updated config value for showing the search button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             chorusDebug:'console',
             searchText: 'My Search Button',
             searchCallback: 'myCallbackFunction',
-            flattenSearchResults: true
+            flattenSearchResults: true,
+            showSearchButton: true
         };
         _chorus.init('my-class-name', config);
         config = {
