core - sass cleanup; refactored module folder structure

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     id
 </div>
 <h2 class="chorus-standard-font">Results: Scales</h2>
-<div id="results-scales" class="results-container">
+<div id="results-scales" class="chorus-results-container">
 </div>
 <h2 class="chorus-standard-font">Results: Chords</h2>
-<div id="results-chords" class="results-container">
+<div id="results-chords" class="chorus-results-container">
 </div>
 <a onclick="_chorus.search();" class="chorus-button">search for scales and chords</a>
 <a onclick="_chorus.clear();" class="chorus-button">Clear Chorus Results</a>
