core - bug fix for clear results function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="my-class-name">
     class
 </div>
-<div id="my-id-name">
+<div id="my-id">
     id
 </div>
 <h2 class="chorus-standard-font">Results: Scales</h2>
@@ -42,7 +42,7 @@
             layoutContainerClass: 'myClassName',
             multicolor: true
         };
-        _chorus.init('my-id-name', config);
+        _chorus.init('my-id', config);
     });
     document.addEventListener('chorusInitComplete', function(e) {
         console.log('_chorus test - chorus init complete');
